[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor", "Emmett Jayhart <emmett@jayhart.io>"]
keywords = ["discord", "rpc", "ipc"]
version = "0.6.0"
repository = "https://github.com/EmmettJayhart/bevy-discord-rpc.git"
edition = "2021"

[dependencies]
discord-presence = { version = "1.0", git = "https://github.com/jewlexx/discord-presence" }
bevy = { version = "0.13", default-features = false }
parking_lot = "0.12"
quork = { version = "0.6", default-features = false, features = ["traits"] }
derive_more = "0.99.17"

[dev-dependencies]
version-sync = "0.9"
