[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor", "Emmett Jayhart <emmett@jayhart.io>"]
keywords = ["discord", "rpc", "ipc"]
version = "0.8.0"
repository = "https://github.com/EmmettJayhart/bevy-discord-rpc.git"
edition = "2021"

[dependencies]
discord-presence = { version = "1.4", git = "https://github.com/jewlexx/discord-presence" }
bevy = { version = "0.15", default-features = false }
parking_lot = "0.12"
quork = { version = "=0.7.2", default-features = false, features = [
    "macros",
    "std",
    "traits",
] }
derive_more = { version = "1.0", features = ["deref", "deref_mut"] }

[dev-dependencies]
version-sync = "0.9"
